--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li:hover {
 
 .container_1 {
     position: relative;
-    background-image: url(/img/img_header/girlandboy.jpg);
+    background-image: url(img/img_header/girlandboy.jpg);
     background-repeat: no-repeat;
     height: 745px;
 }
@@ -110,7 +110,7 @@ div button:hover {
     margin-left: 30px;
     height: 574px;
     width: 552px;
-    background-image: url(/img/img_container1/right_boy.jpg);
+    background-image: url(img/img_container1/right_boy.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -244,7 +244,7 @@ h3 {
 
 .container_7 {
     height: 745px;
-    background-image: url(/img/img_container5/17\ 1.jpg);
+    background-image: url(img/img_container5/17\ 1.jpg);
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
